Jinja Changelog
===============

Version 1.2
-----------
(codename to be selected, release date unknown)

- environments now have a `translator_factory` parameter that allows
  to change the translator without subclassing the environment.

- fixed bug in buffet plugin regarding the package loader

- once again improved debugger.

- added `groupby` filter.

- added `sameas` test function.

- standalone parser. Jinja does not use the python parser any more and will
  continue having the same semantics in any future python versions. This
  was done in order to simplify updating Jinja to 2.6 and 3.0 and to support
  non python syntax.

- added support for ``expr1 if test else expr2`` (conditional expressions)

- ``foo.0`` as alias for ``foo[0]`` is possible now. This is mainly for
  django compatibility.

- the filter operators has a much higher priority now which makes it
  possible to do ``foo|filter + bar|filter``.

- new AST. the return value of `Environment.parse` is now a Jinja AST and not
  a Jinja-Python AST. This is also the only backwards incompatible change but
  should not affect many users because this feature is more or less
  undocumented and has few use cases.

- tuple syntax returns tuples now and not lists any more.

- the print directive and ``{{ variable }}`` syntax now accepts and implicit
  tuple like the `for` and `cycle` tags. (``{{ 1, 2 }}`` is an implicit alias
  for ``{{ (1, 2) }}` like ``{% for a, b in seq %}`` is for
  ``{% for (a, b) in seq %}``.

- tests called with *one* parameter don't need parentheses. This gives a more
  natural syntax for the `sameas` test and some others:
  ``{{ foo is sameas bar }}`` instead of ``{{ foo is sameas(bar) }}``. If you
  however want to pass more than one argument you have to use parentheses
  because ``{{ foo is sometest bar, baz }}`` is handled as
  ``{{ (foo is sometest(bar), baz) }}``, so as tuple expression.

- removed support for octal character definitions in strings such as