@@ -8,20 +8,25 @@ does not support the `__loader__` hook which is used by Jinja to provide
 templates. Although the import system was implemented three Python versions
 ago the default traceback system still doesn't support it.
 
-However most of the extended web development traceback module support it:
+However most of the extended web development traceback modules have support
+for `__loader__`.  Either directly or via the linecache module:
 
--  `Colubrid Debugging Middleware`_
+-  `Werkzeug Debugging Middleware`_
+-  `Django`_
 -  `cgitb`_
 -  `EvalException`_
-
-Note that the django traceback module currently does not provide this. `A
-ticket`_ was filed already so there is hope that this will be fixed.
 
 To enable debugging you have to use one of those debugging systems or
 implement your own one with support for `__loader__`.
 
+The python implementation of the jinja debugger can only translate the first
+exception in a traceback which can lead to problematic results.  If you have
+the extended debugger c extension compiled (default on unix systems but only
+available on Windows if you have a VisualStudio 2003 installation) all frames
+in the traceback will point to the correct linenumbers of the templates.
 
-.. _Colubrid Debugging Middleware: http://trac.pocoo.org/repos/colubrid/trunk/colubrid/debug.py
+
+.. _Werkzeug Debugging Middleware: http://werkzeug.pocoo.org/
+.. _Django: http://www.djangoproject.com/
 .. _cgitb: http://docs.python.org/lib/module-cgitb.html
 .. _EvalException: http://pythonpaste.org/module-paste.evalexception.html
-.. _A ticket: http://code.djangoproject.com/ticket/3734
